appId: com.example.example
tags:
  - passing
---
- launchApp

- assertVisible: 'Form Test'
- pressKey: 'Home'
- assertNotVisible: 'Form Test'

- launchApp

- assertVisible: 'Form Test'
- tapOn: 'Form Test'
- tapOn: 'Email'
- inputText: 'types'
- pressKey: backspace
- assertVisible: 'type'
