appId: com.example.example
tags:
  - passing
---
- launchApp # For idempotence of sections

- tapOn: 'Gesture Tester'
- doubleTapOn: 'Double tap me'
- assertVisible: 'Double tapped!'
