appId: com.example.example
---
- launchApp # For idempotence of sections

- tapOn: 'Gesture Tester'
- longPressOn: 'Long press me'
- assertVisible: 'Long pressed!'
